Improvements on tmux usage

--- a/files/link/.tmux.conf
+++ b/files/link/.tmux.conf
@@ -1,3 +1,20 @@
+# Windows and panes aren't zero-indexed (which is the default).
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
+
+# Windows are renumbered when one is closed.
+set-option -g renumber-windows on
+
+# Mouse support
+setw -g mouse on
+
+# Don't automatically rename windows to their current process/path.
+set-option -g allow-rename off
+
+#######################
+### CUSTOM BINDINGS ###
+#######################
+
 # Switch C-b for C-a
 unbind C-b
 set -g prefix C-a
@@ -24,9 +41,24 @@ bind l split-window -h -c "#{pane_current_path}"
 bind r source-file ~/.tmux.conf
 
 setw -g mode-keys vi
-setw -g mouse on
 set-window-option -g xterm-keys on
 set -g default-terminal "screen-256color"
-set -g status off
 set -sg escape-time 0
 setw -g aggressive-resize on
+
+
+######################
+### DESIGN CHANGES ###
+######################
+set-option -g status-bg default
+set -g status-justify centre
+set-option -g status-position top
+
+
+set -g status-left ""
+
+set -g status-right ""
+
+setw -g window-status-format " #[fg=colour6]#I:#W "
+setw -g window-status-current-format " #[fg=colour3]#I:#W "
+setw -g window-status-current-attr bold
