--- a/files/link/.tmux.conf
+++ b/files/link/.tmux.conf
@@ -41,6 +41,8 @@ bind l split-window -h -c "#{pane_current_path}"
 bind r source-file ~/.tmux.conf
 
 setw -g mode-keys vi
+#bind -T copy-mode-vi y send -X copy-pipe "xclip -selection c"
+bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
 set-window-option -g xterm-keys on
 set -g default-terminal "screen-256color"
 set -sg escape-time 0
