--- a/files/link/.tmux.conf
+++ b/files/link/.tmux.conf
@@ -6,7 +6,7 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 # Mouse support
-setw -g mouse on
+#setw -g mouse on
 
 # Don't automatically rename windows to their current process/path.
 set-option -g allow-rename off
@@ -41,8 +41,8 @@ bind l split-window -h -c "#{pane_current_path}"
 bind r source-file ~/.tmux.conf
 
 setw -g mode-keys vi
-#bind -T copy-mode-vi y send -X copy-pipe "xclip -selection c"
-bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+#bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"
+#bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "xclip -se c -i"
 set-window-option -g xterm-keys on
 set -g default-terminal "screen-256color"
 set -sg escape-time 0
