Adjustments in .vimrc

--- a/files/link/.tmux.conf
+++ b/files/link/.tmux.conf
@@ -44,9 +44,11 @@ setw -g mode-keys vi
 #bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"
 #bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "xclip -se c -i"
 set-window-option -g xterm-keys on
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 set -sg escape-time 0
 setw -g aggressive-resize on
+set -g history-limit 10000
 
 
 ######################
@@ -63,4 +65,4 @@ set -g status-right ""
 
 setw -g window-status-format " #[fg=colour6]#I:#W "
 setw -g window-status-current-format " #[fg=colour3]#I:#W "
-setw -g window-status-current-attr bold
+#setw -g window-status-current-attr bold
