--- a/files/link/.tmux.conf
+++ b/files/link/.tmux.conf
@@ -6,10 +6,10 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 # Mouse support
-#setw -g mouse on
+# setw -g mouse on
 
 # Don't automatically rename windows to their current process/path.
-set-option -g allow-rename off
+set-option -g allow-rename on
 
 #######################
 ### CUSTOM BINDINGS ###
@@ -45,7 +45,9 @@ setw -g mode-keys vi
 #bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "xclip -se c -i"
 set-window-option -g xterm-keys on
 #set -g default-terminal "screen-256color"
-set -g default-terminal "tmux-256color"
+#set -g default-terminal "tmux-256color"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
+set-option -g default-terminal "tmux-256color"
 set -sg escape-time 0
 setw -g aggressive-resize on
 set -g history-limit 10000
